--- a/index.html
+++ b/index.html
@@ -1,9 +1,87 @@
-<!DOCTYPE html> 
-<html   lang="tr">
-    <head>
-        <meta charset="utf-8">
-        <meta name="viewport"
-content="widht=device-widht, initial-scale=1.0">
-<title>Albert Pike</title>
-    </head>
+<!DOCTYPE html>
+<html lang="tr">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Tayland #Zirve | Spotify Player</title>
+    <style>
+        * { margin: 0; padding: 0; box-box: border-box; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; }
+        
+        body, html { height: 100%; overflow: hidden; background-color: #000; }
+
+        /* Arka Plan Drift Videosu */
+        .video-background {
+            position: fixed;
+            right: 0; bottom: 0;
+            min-width: 100%; min-height: 100%;
+            filter: blur(8px) brightness(0.5); /* Hafif buğulu ve karanlık */
+            z-index: -1;
+            object-fit: cover;
+        }
+
+        /* Spotify Kartı Konumu */
+        .container {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+        }
+
+        /* Spotify Player Tasarımı */
+        .spotify-card {
+            background: rgba(255, 255, 255, 0.1);
+            backdrop-filter: blur(15px);
+            border: 1px solid rgba(255, 255, 255, 0.2);
+            padding: 30px;
+            border-radius: 20px;
+            box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.8);
+            width: 350px;
+            text-align: center;
+            color: white;
+            transition: transform 0.3s ease;
+        }
+
+        .spotify-card:hover { transform: scale(1.05); }
+
+        .album-art {
+            width: 250px;
+            height: 250px;
+            margin: 0 auto 20px;
+            border-radius: 10px;
+            background: url('https://i.scdn.co/image/ab67616d0000b2736ca5c90113b30c3a43ffb8f4') no-repeat center;
+            background-size: cover;
+            box-shadow: 0 10px 20px rgba(0,0,0,0.5);
+        }
+
+        h2 { font-size: 24px; margin-bottom: 5px; }
+        p { font-size: 16px; color: #1DB954; font-weight: bold; margin-bottom: 20px; }
+
+        /* Spotify Widget (Şarkıyı Çalması İçin) */
+        iframe {
+            border-radius: 12px;
+            background-color: transparent;
+        }
+    </style>
+</head>
+<body>
+
+    <iframe class="video-background" 
+        src="https://www.youtube.com/embed/dQw4w9WgXcQ?autoplay=1&mute=1&controls=0&loop=1&playlist=O3_YJbU68M4" 
+        frameborder="0" allow="autoplay; encrypted-media">
+    </iframe>
+
+    <div class="container">
+        <div class="spotify-card">
+            <div class="album-art"></div>
+            <h2>Superman</h2>
+            <p>Eminem</p>
+            
+            <iframe src="https://open.spotify.com/embed/track/4woTEX1SjYI4J0V0rnuoDR?utm_source=generator&theme=0" 
+                width="100%" height="152" frameBorder="0" allowfullscreen="" 
+                allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy">
+            </iframe>
+        </div>
+    </div>
+
+</body>
 </html>
