--- a/index.html
+++ b/index.html
@@ -3,13 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Superman - Eminem | Tayland #Zirve</title>
+    <title>Albert Pike </title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <style>
         * { margin: 0; padding: 0; box-sizing: border-box; font-family: 'Inter', sans-serif; }
         body { background: #000; height: 100vh; display: flex; justify-content: center; align-items: center; overflow: hidden; }
 
-        /* Arka Plandaki Drift Videosu */
         #video-bg {
             position: fixed;
             top: 0; left: 0; width: 100%; height: 100%;
@@ -18,7 +17,6 @@
             z-index: -1;
         }
 
-        /* YouTube Music Tarzı Kart */
         .player-card {
             width: 380px;
             background: rgba(20, 20, 20, 0.7);
@@ -42,18 +40,15 @@
 
         .song-info h2 { font-size: 24px; margin-bottom: 5px; }
         .song-info p { color: #aaa; font-size: 16px; margin-bottom: 30px; }
-
-        /* Progress Bar */
+        
         .progress-container { width: 100%; height: 4px; background: rgba(255,255,255,0.1); border-radius: 2px; margin-bottom: 10px; position: relative; }
         .progress-bar { width: 45%; height: 100%; background: #1DB954; border-radius: 2px; }
         .time-info { display: flex; justify-content: space-between; font-size: 12px; color: #888; margin-bottom: 25px; }
 
-        /* Controls */
         .controls { display: flex; justify-content: space-between; align-items: center; font-size: 20px; }
         .play-btn { width: 70px; height: 70px; background: white; color: black; border-radius: 50%; display: flex; justify-content: center; align-items: center; font-size: 28px; cursor: pointer; transition: 0.2s; }
         .play-btn:hover { transform: scale(1.1); }
 
-        /* Tıklama Uyarısı */
         #overlay {
             position: fixed; top: 0; left: 0; width: 100%; height: 100%;
             background: rgba(0,0,0,0.85); color: white;
@@ -111,15 +106,11 @@
         const video = document.getElementById('video-bg');
 
         function startEverything() {
-            // Müziği başlat
             music.play();
-            // Videoyu başlat (YouTube API üzerinden postMessage ile)
             video.contentWindow.postMessage('{"event":"command","func":"playVideo","args":""}', '*');
-            // Giriş ekranını kaldır
             overlay.style.display = 'none';
         }
 
-        // Play/Pause butonu kontrolü
         const btn = document.getElementById('play-pause-btn');
         btn.addEventListener('click', () => {
             if (music.paused) {
@@ -133,3 +124,4 @@
     </script>
 </body>
 </html>
+
